--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@
 @font-face {
   font-family: "JetBrains Mono";
   src: url("./assets/fonts/JetBrainsMono-Regular.woff2"), format("woff2");
-  font-display: swap;
+  font-display: block;
   font-weight: 400;
   font-style: normal;
 }
@@ -56,7 +56,7 @@
 @font-face {
   font-family: "JetBrains Mono";
   src: url("./assets/fonts/JetBrainsMono-Italic.woff2"), format("woff2");
-  font-display: swap;
+  font-display: block;
   font-weight: 400;
   font-style: italic;
 }
@@ -64,7 +64,7 @@
 @font-face {
   font-family: "JetBrains Mono";
   src: url("./assets/fonts/JetBrainsMono-Bold.woff2"), format("woff2");
-  font-display: swap;
+  font-display: block;
   font-weight: 700;
   font-style: normal;
 }
@@ -72,7 +72,7 @@
 @font-face {
   font-family: "JetBrains Mono";
   src: url("./assets/fonts/JetBrainsMono-BoldItalic.woff2"), format("woff2");
-  font-display: swap;
+  font-display: block;
   font-weight: 700;
   font-style: italic;
 }
@@ -80,7 +80,7 @@
 @font-face {
   font-family: "Press Start 2P";
   src: url("./assets/fonts/PressStart2P-Regular.ttf"), format("truetype");
-  font-display: swap;
+  font-display: block;
   font-weight: 400;
   font-style: normal;
 }
