--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,10 @@
   font-weight: 400;
   font-style: normal;
   /* not anti-aliasing */
-  -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: grayscale;
+  font-smoothing: none;
+  filter: contrast(1);
 }
 
 body {
