--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,10 @@ body {
   display: none; /* Chrome, Safari and Opera */
 }
 
+.sammy-input {
+  @apply bg-bg-sky italic border border-accent-navy rounded p-2 flex-2/3;
+}
+
 /* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
