--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: var(--color-text-default);
   background-color: var(--color-bg-pink);
 
