--- a/src/style.css
+++ b/src/style.css
@@ -120,6 +120,10 @@ body {
   @apply bg-bg-sky italic border border-accent-navy rounded p-2 flex-2/3;
 }
 
+.unflex {
+  @apply flex-none;
+}
+
 /* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
