--- a/src/style.css
+++ b/src/style.css
@@ -125,6 +125,22 @@ body {
   @apply flex-none;
 }
 
+.pulse {
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 /* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
