Streamlined add class form

--- a/src/style.css
+++ b/src/style.css
@@ -118,7 +118,7 @@ body {
 }
 
 .sammy-input {
-  @apply bg-bg-sky italic border border-accent-navy rounded p-2 flex-2/3;
+  @apply bg-bg-sky italic border border-accent-navy rounded p-2 flex-2/3 min-w-0;
 }
 
 .unflex {
